fix(css): better scrollbar design

--- a/styles.css
+++ b/styles.css
@@ -197,12 +197,13 @@ form {
 
 .content::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
 }
 
 .content::-webkit-scrollbar-thumb {
   background-color: var(--silver--tree);
   outline: 1px solid var(--silver--sand);
-  border-radius: 3px;
+  border-radius: 10px;
 }
 
 .todo-item {
